--- a/authappcourse/styles/Form.module.css
+++ b/authappcourse/styles/Form.module.css
@@ -21,3 +21,16 @@
 .button_custom{
 @apply w-full border py-3 flex justify-center gap-2
 }
+
+.input_text + *{
+    color : #CBD5E1;
+}
+
+.input_text:focus + * {
+    color: #6366F1;
+}
+
+.input_text:not([type=email])~ span:hover * {
+    color: #6366F1;
+    cursor: pointer;
+}
